# dutlink-firmware

./: README.md  app.js  flash-dutlink.sh  index.html  webdfu.js
.github/workflows/: build-firmware.yaml  publish-binaries.yaml
application/: Cargo.toml  Containerfile  Makefile  README.md  build.rs  firmware.metainfo.xml.in  memory.x  openocd.cfg  openocd.gdb
application/src/: config.rs  control.rs  ctlpins.rs  dfu.rs  filter.rs  main.rs  powermeter.rs  shell.rs  storage.rs  usbserial.rs  version.rs
bootloader/: Cargo.toml  Makefile  README.md  memory.x  openocd.cfg
bootloader/src/: main.rs
