[package]
name = "jumpstarter"
version = "0.0.6"
authors = ["Miguel Angel Ajo Pelayo <majopela@redhat.com>"]
edition = "2018"
license = "MIT"
keywords = ["no-std", "usb-device", "dfu"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
stm32f4xx-hal = { version = "0.15.0", features = ["stm32f411", "usb_fs", "rt"] }
stm32f4 = { version = "0.15.1", features = ["stm32f411", "rt"]}
panic-halt= "0.2.0"
usb-device = { version="0.2.9", features = ["control-buffer-256"] }
usbd-serial = "0.1.1"
embedded-hal = "0.2.7"
usbd-dfu-rt = { version="0.3.1"}
arrform = "0.1.1"
cortex-m-rtic = "1.1.4"
systick-monotonic = "1.0.1"
ushell = "0.3.6"
heapless = "0.7.16"
panic-semihosting = "0.6.0"
arrayvec = { version="0.6.1", default-features=false } # anything beyond 0.6.1 fails for no_std
embedded-storage = "0.3.0"
