[package]
name = "jumpstarter"
version = "0.0.6"
authors = ["Miguel Angel Ajo Pelayo <majopela@redhat.com>"]
edition = "2018"
license = "MIT"
keywords = ["no-std", "usb-device", "dfu"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
stm32f4xx-hal = { version = "0.21.0", features = ["stm32f411", "usb_fs"] }
stm32f4 = { version = "0.15.1", features = ["stm32f411", "rt"]}
panic-halt= "0.2.0"
usb-device = { version="0.3.2", features = ["control-buffer-256"] }
usbd-serial = "0.2.2"
embedded-hal = "1.0.0"
usbd-dfu-rt = { git = "https://github.com/ianrrees/usbd-dfu-rt.git", branch = "update-usb-device" }
arrform = "0.1.1"
cortex-m-rtic = "1.1.4"
systick-monotonic = "1.0.1"
ushell = "0.3.6"
heapless = "0.8.0"
panic-semihosting = "0.6.0"
arrayvec = { version="0.7.6", default-features=false }
embedded-storage = "0.3.1"
num_enum = { version = "0.7.3", default-features = false }
